[FEAT] add mentalRL page

--- a/proj/mentalRL/index.html
+++ b/proj/mentalRL/index.html
@@ -1,1 +1,122 @@
-<meta http-equiv="refresh" content="0; URL='https://baihan.nyc/proj/proj'" />
+<!DOCTYPE html>
+<script src="../../js/loadhtml.js"></script>
+
+<html lang="en">
+
+<head>
+    <div w3-include-html="../../html/header.html"></div>
+    <script>
+        w3IncludeHTML();
+    </script>
+</head>
+
+<body>
+    <div w3-include-html="../../html/navleft.html"></div>
+    <div w3-include-html="../../html/navright.html"></div>
+
+    <div class="container-fluid p-0">
+        <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="">
+            <div class="my-auto">
+                <h2 class="mb-5" style="text-transform:none">Reinforcement Learning Agents with Mental Disorders</h2>
+
+                <b class="text-primary">  by Baihan Lin, Columbia University, Sep 2018 &nbsp; </b>
+                <p class="mb-5 text-primary">
+                    GitHub code: <a href="https://github.com/doerlbh/mentalRL" style="color:#268fd6">https://github.com/doerlbh/mentalRL</a>
+
+                    <br> Joint work with Dr. Guillermo Cecchi (IBM Research), Dr. Djallel Bouneffouf (IBM Research), Dr. Jenna Reinen (IBM Research) and Dr. Irina Rish (Mila, UdeM)
+                    <br>
+                    <img src="./img/mentalRL.png" alt="" class="photo">
+                </p>
+
+                <h4 style="text-transform:none"> <b>TL;DR:</b> I train AI agents to play games just like people with mental disorders play games, which can (1) help neuroscientists understand these conditions, (2) help create better AI algorithms to tackle human-level challenges, and (3) help doctors clinically monitor psychiatric patients by simply letting them play computer games. </h4>
+
+                <b class="text-primary"> Abstract &nbsp; </b>
+
+                <p class="mb-5 text-primary">
+                    Drawing an inspiration from behavioral studies of human decision making, we propose here a more general and flexible parametric framework for reinforcement learning that extends standard Q-learning to a two-stream model for processing positive and negative rewards, and allows to incorporate a wide range of reward-processing biases -- an important component of human decision making which can help us better understand a wide spectrum of multi-agent interactions in complex real-world socioeconomic systems, as well as various neuropsychiatric conditions associated with disruptions in normal reward processing. From the computational perspective, we observe that the proposed Split-QL model and its clinically inspired variants consistently outperform standard Q-Learning and SARSA methods, as well as recently proposed Double Q-Learning approaches, on simulated tasks with particular reward distributions, a real-world dataset capturing human decision-making in gambling tasks, and the Pac-Man game in a lifelong learning setting across different reward stationarities.
+                    <br>
+                    <!-- <img src="../../img/random/sleep.jpg" alt="" class="photo"> -->
+                </p>
+
+
+<div class="photorow">
+                    <div class="photocolumn">
+                        <div class="simplecontainer">
+                            <img src="./img/AD.gif" alt="" class="photo">
+                            <div class="overlay"> Alzheimer's </div>
+                        </div>
+                        <div class="simplecontainer">
+                            <img src="./img/ADD.gif" alt="" class="photo">
+                            <div class="overlay"> Addiction </div>
+                        </div>
+                        <div class="simplecontainer">
+                            <img src="./img/ADHD.gif" alt="" class="photo">
+                            <div class="overlay"> ADHD </div>
+                        </div>
+                    </div>
+                    <div class="photocolumn">
+                        <div class="simplecontainer">
+                            <img src="./img/bvFTD.gif" alt="" class="photo">
+                            <div class="overlay"> bvFTD (dementia) </div>
+                        </div>
+                        <div class="simplecontainer">
+                            <img src="./img/DQL.gif" alt="" class="photo">
+                            <div class="overlay"> Double Q-Learning </div>
+                        </div>
+                        <div class="simplecontainer">
+                            <img src="./img/M.gif" alt="" class="photo">
+                            <div class="overlay"> moderate </div>
+                        </div>
+                        <div class="simplecontainer">
+                            <img src="./img/NQL.gif" alt="" class="photo">
+                            <div class="overlay"> Negative Q-Learning </div>
+                        </div>
+                    </div>
+                    <div class="photocolumn">
+                                                <div class="simplecontainer">
+                            <img src="./img/PD.gif" alt="" class="photo">
+                            <div class="overlay"> Parkinson's </div>
+                        </div>
+                        <div class="simplecontainer">
+                            <img src="./img/PQL.gif" alt="" class="photo">
+                            <div class="overlay"> Positive Q-Learning </div>
+                        </div>
+                        <div class="simplecontainer">
+                            <img src="./img/QL.gif" alt="" class="photo">
+                            <div class="overlay"> Q-Learning </div>
+                        </div>
+                        <div class="simplecontainer">
+                            <img src="./img/SQL.gif" alt="" class="photo">
+                            <div class="overlay"> Split Q-Learning </div>
+                        </div>
+                        
+                    </div>
+                </div>
+
+
+            </div>
+        </section>
+    </div>
+
+    <script>
+        w3IncludeHTML();
+    </script>
+    <!-- Bootstrap core JavaScript -->
+    <script src="../../js/jquery.min.js"></script>
+    <script src="../../js/bootstrap.bundle.js"></script>
+    <!-- Plugin JavaScript -->
+    <script src="../../js/jquery.easing.js"></script>
+    <!-- Custom scripts for this template -->
+    <script src="../../js/resume.js"></script>
+</body>
+<!-- 
+        <div class="flier2"><img src="img/random/rock.png" alt="" style="width:500px;height:300px;"></div>
+
+        <div class="flier"><img src="img/random/doge.png" alt="" style="width:300px;height:400px;"></div>
+         -->
+<footer style="align:center;">&copy; Copyright 2016
+    <script>
+        new Date().getFullYear() > 2016 && document.write("-" + new Date().getFullYear());
+    </script> by Baihan Lin</footer>
+
+</html>
