[FEAT] add gif for mentalRL games

--- a/proj/mentalRL/index.html
+++ b/proj/mentalRL/index.html
@@ -21,14 +21,20 @@
 
                 <b class="text-primary">  by Baihan Lin, Columbia University, Sep 2018 &nbsp; </b>
                 <p class="mb-5 text-primary">
-                    GitHub code: <a href="https://github.com/doerlbh/mentalRL" style="color:#268fd6">https://github.com/doerlbh/mentalRL</a>
+                    <br> <b> GitHub code:</b> <a href="https://github.com/doerlbh/mentalRL" style="color:#268fd6">https://github.com/doerlbh/mentalRL</a>
 
                     <br> Joint work with Dr. Guillermo Cecchi (IBM Research), Dr. Djallel Bouneffouf (IBM Research), Dr. Jenna Reinen (IBM Research) and Dr. Irina Rish (Mila, UdeM)
                     <br>
+                    <br>
+
+                    <b style="text-transform:none"> TL;DR:</b>
+
+                    I train AI agents to play games just like people with mental disorders play games, which can (1) help neuroscientists understand these conditions, (2) help create better AI algorithms to tackle human-level challenges, and (3) help doctors clinically monitor psychiatric patients by simply letting them play computer games. 
+                    <br>
+                    <br>
+
                     <img src="./img/mentalRL.png" alt="" class="photo">
                 </p>
-
-                <h4 style="text-transform:none"> <b>TL;DR:</b> I train AI agents to play games just like people with mental disorders play games, which can (1) help neuroscientists understand these conditions, (2) help create better AI algorithms to tackle human-level challenges, and (3) help doctors clinically monitor psychiatric patients by simply letting them play computer games. </h4>
 
                 <b class="text-primary"> Abstract &nbsp; </b>
 
@@ -37,6 +43,7 @@
                     <br>
                     <!-- <img src="../../img/random/sleep.jpg" alt="" class="photo"> -->
                 </p>
+
 
 
 <div class="photorow">
@@ -53,11 +60,15 @@
                             <img src="./img/ADHD.gif" alt="" class="photo">
                             <div class="overlay"> ADHD </div>
                         </div>
-                    </div>
-                    <div class="photocolumn">
                         <div class="simplecontainer">
                             <img src="./img/bvFTD.gif" alt="" class="photo">
                             <div class="overlay"> bvFTD (dementia) </div>
+                        </div>
+                    </div>
+                    <div class="photocolumn">
+                        <div class="simplecontainer">
+                            <img src="./img/CP.gif" alt="" class="photo">
+                            <div class="overlay"> Chronic pain </div>
                         </div>
                         <div class="simplecontainer">
                             <img src="./img/DQL.gif" alt="" class="photo">
