--- a/proj/mentalRL/index.html
+++ b/proj/mentalRL/index.html
@@ -22,21 +22,24 @@
                 <b class="text-primary">  by Baihan Lin, Columbia University, Sep 2018 &nbsp; </b>
                 <p class="mb-5 text-primary">
                     <br> <b> GitHub code:</b> <a href="https://github.com/doerlbh/mentalRL" style="color:#268fd6">https://github.com/doerlbh/mentalRL</a>
-
+                    
+                    <br>
                     <br> Joint work with Dr. Guillermo Cecchi (IBM Research), Dr. Djallel Bouneffouf (IBM Research), Dr. Jenna Reinen (IBM Research) and Dr. Irina Rish (Mila, UdeM)
                     <br>
                     <br>
+                </p>
 
-                    <b style="text-transform:none"> TL;DR:</b>
+                    <h3 style="text-transform:none"> TL;DR </h3>
 
+<b class="text-primary"> 
                     I train AI agents to play games just like people with mental disorders play games, which can (1) help neuroscientists understand these conditions, (2) help create better AI algorithms to tackle human-level challenges, and (3) help doctors clinically monitor psychiatric patients by simply letting them play computer games. 
                     <br>
                     <br>
 
-                    <img src="./img/mentalRL.png" alt="" class="photo">
                 </p>
+                    <img src="./img/mentalRL.png" alt="" class="photo">
 
-                <b class="text-primary"> Abstract &nbsp; </b>
+                    <h3 style="text-transform:none"> Abstract </h3>
 
                 <p class="mb-5 text-primary">
                     Drawing an inspiration from behavioral studies of human decision making, we propose here a more general and flexible parametric framework for reinforcement learning that extends standard Q-learning to a two-stream model for processing positive and negative rewards, and allows to incorporate a wide range of reward-processing biases -- an important component of human decision making which can help us better understand a wide spectrum of multi-agent interactions in complex real-world socioeconomic systems, as well as various neuropsychiatric conditions associated with disruptions in normal reward processing. From the computational perspective, we observe that the proposed Split-QL model and its clinically inspired variants consistently outperform standard Q-Learning and SARSA methods, as well as recently proposed Double Q-Learning approaches, on simulated tasks with particular reward distributions, a real-world dataset capturing human decision-making in gambling tasks, and the Pac-Man game in a lifelong learning setting across different reward stationarities.
@@ -44,12 +47,25 @@
                     <!-- <img src="../../img/random/sleep.jpg" alt="" class="photo"> -->
                 </p>
 
+                    <h3 style="text-transform:none"> Publication </h3>
 
+<p class="mb-5 text-primary">
+                [1] Lin, B., Bouneffouf, D., & Cecchi, G. (2019). Split Q learning: reinforcement learning with two-stream rewards. <em> In Proceedings of the 28th International Joint Conference on Artificial Intelligence (pp. 6448-6449). AAAI Press.</em>
+<br> <b> link: </b> <a href="https://arxiv.org/abs/1906.12350" style="color:#268fd6">https://arxiv.org/abs/1906.12350</a>
+                    <br>
+<br>
+                <br> [2] Lin, B., Cecchi, G., Bouneffouf, D., Reinen, J., & Rish, I. (2019). Reinforcement Learning Models of Human Behavior: Reward Processing in Mental Disorders. <em> 2019 NeurIPS Workshop on Biological and Artificial Reinforcement Learning (BARL) </em>
+                <br> <b> link: </b> <a href="https://arxiv.org/abs/1906.11286" style="color:#268fd6">https://arxiv.org/abs/1906.11286</a>
+                    <br>
+                    <!-- <img src="../../img/random/sleep.jpg" alt="" class="photo"> -->
+                </p>
+
+                    <h3 style="text-transform:none"> Watch some "mental" agents playing Pacman </h3>
 
 <div class="photorow">
                     <div class="photocolumn">
                         <div class="simplecontainer">
-                            <img src="./img/AD.gif" alt="" class="photo">
+                            <img src="./img/AZ.gif" alt="" class="photo">
                             <div class="overlay"> Alzheimer's </div>
                         </div>
                         <div class="simplecontainer">
