--- a/html/navright.html
+++ b/html/navright.html
@@ -6,7 +6,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="https://www.baihan.nyc/proj/mentalRL">mental AI</a>
+                <a class="nav-link js-scroll-trigger" href="https://www.baihan.nyc/proj/mentalAI">mental AI</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="https://www.baihan.nyc/proj/dynRSA"> dynamic RSA</a>
