--- a/proj/mentalAI/index.html
+++ b/proj/mentalAI/index.html
@@ -64,26 +64,26 @@
                 <p class="mb-5 text-primary">
                     Inspired by the neurological and psychiatric literature, we build upon the standard Q-Learning, a state-of-art approach to reinforcement learning problem, and extend it to a parametric family of models, called Split-QL, where the reward information is split into two streams, positive and negative. The model puts different weight parameters on the incoming positive and negative rewards, and imposes different discounting factors on positive and negative reward accumulated in the past. This simple but powerful extension of Q-learning allows to capture a variety of reward-processing biases observed in human behavior. Below is our algorithm and parameters:
                     <br>
-                    <img src="./img/algorithm.png" alt=""  style="width:80%;display:block;text-align:center">
+                    <img src="./img/algorithm.png" alt=""  style="width:80%;display:block;margin-left:auto;margin-right:auto;">
                 </p>
 
                 <h3 style="text-transform:none"> Results </h3>
 
                 <p class="mb-5 text-primary">
 
-                    Empirically, we evaluated the algorithms in three settings: the gambling game of a simple Markov Decision Process (MDP), a real-life Iowa Gambling Task (IGT) and the PacMan computer game with different stationarities.
+                    Empirically, I evaluated the algorithms in three settings: the gambling game of a simple Markov Decision Process (MDP), a real-life Iowa Gambling Task (IGT) and the PacMan computer game with different stationarities.
                     <br> In the MDP and IGT tasks, our algorithms outperform baseline in many cases.
                     <br>
-                    <img src="./img/f1.png" alt=""  style="width:80%;display:block;text-align:center">
+                    <img src="./img/f1.png" alt=""  style="width:80%;display:block;margin-left:auto;margin-right:auto;">
                     <br> For instance, in 100 randomly generated arficial environments, our agents beats standard ones most of the times
                     <br>
-                    <img src="./img/f2.png" alt=""  style="width:80%;display:block;text-align:center">
+                    <img src="./img/f2.png" alt=""  style="width:80%;display:block;margin-left:auto;margin-right:auto;">
                     <br> In the IGT experiment, the behavioral trajectories of the "mental" agents cluster by the psychiatric conditions with real human data.
                     <br>
-                    <img src="./img/f3.png" alt=""  style="width:80%;display:block;text-align:center">
+                    <img src="./img/f3.png" alt=""  style="width:80%;display:block;margin-left:auto;margin-right:auto;">
                     <br> In the PacMan experiment, our two-stream-reward paradigm demonstrated constant advantages over the baseline algorithms.
                     <br>
-                    <img src="./img/f4.png" alt=""  style="width:80%;display:block;text-align:center">
+                    <img src="./img/f4.png" alt=""  style="width:100%;display:block;margin-left:auto;margin-right:auto;">
                 </p>
 
                 <h3 style="text-transform:none"> Ongoing work </h3>
