--- a/proj/mentalAI/index.html
+++ b/proj/mentalAI/index.html
@@ -36,7 +36,7 @@
                     <br>
 
                 </p>
-                <img src="./img/mentalRL.png" alt="" style="width:80%;display:block;text-align:center">
+                <img src="./img/mentalRL.png" alt="" style="width:80%;display:block;margin-left:auto;margin-right:auto;">
                 <br>
 
                 <h3 style="text-transform:none"> Abstract </h3>
