[DBG] make the name shorter for dynRSA

--- a/proj/dynRSA/index.html
+++ b/proj/dynRSA/index.html
@@ -17,7 +17,7 @@
     <div class="container-fluid p-0">
         <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="">
             <div class="my-auto">
-                <h2 class="mb-5" style="text-transform:none">Dynamic Representational Similarity Analysis (dynRSA)</h2>
+                <h2 class="mb-5" style="text-transform:none">Dynamic Representational Similarity Analysis</h2>
 
                 <b class="text-primary">  by Baihan Lin, Columbia University, Apr 2019 &nbsp; </b>
                 <p class="mb-5 text-primary">
