--- a/proj/mentalAI/index.html
+++ b/proj/mentalAI/index.html
@@ -56,6 +56,7 @@
                     <br> [2] Lin, B., Cecchi, G., Bouneffouf, D., Reinen, J., & Rish, I. (2019). Reinforcement Learning Models of Human Behavior: Reward Processing in Mental Disorders. <em> 2019 NeurIPS Workshop on Biological and Artificial Reinforcement Learning (BARL) </em>
                     <br> <b> link: </b> <a href="https://arxiv.org/abs/1906.11286" style="color:#268fd6">https://arxiv.org/abs/1906.11286</a>
                     <br>
+                    <br> [3] Lin, B. (2019). Modeling Neurological and Psychiatric Disorders with Reward Biased Reinforcement Learning Models. <em> 2019 Technology in Psychiatry Summit (TIPS) </em>
                     <!-- <img src="../../img/random/sleep.jpg" alt=""> -->
                 </p>
 
