[FEAT] init neuralMDL page

--- a/proj/topology/index.html
+++ b/proj/topology/index.html
@@ -33,9 +33,7 @@
                 <h3 style="text-transform:none"> TL;DR </h3>
 
                 <p class="text-primary">
-                    I developed several new visualization and inference methods within the framework of geometric and topological data analysis (TDA). Using the language of the mathematical field of algebraic topology, I investigated the possibility of introducing higher-order cliques as a summary statistics to visualize and understand complicated biological data, such as neural recording or single-cell genomics data.  
-                    <br>
-                    This page is an overview of several of my independent projects on TDA: topological simplicial analysis (TSA), temporal TDA (tTDA), interactive TDA (iTDA)
+                    I developed several new visualization and inference methods within the framework of geometric and topological data analysis (TDA). Using the language of the mathematical field of algebraic topology, I investigated the possibility of introducing higher-order cliques as a summary statistics to visualize and understand complicated biological data, such as neural recording or single-cell genomics data. This page is an overview of several of my independent projects on TDA: topological simplicial analysis (TSA), temporal TDA (tTDA), interactive TDA (iTDA)...
                     <br>
 
                 </p>
