--- a/html/navleft.html
+++ b/html/navleft.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top" id="sideNav">
-    <h3 class="bottom-some"><a style="color:#ffffff;display:inline;text-transform:none;" href="#">Baihan Lin&nbsp;&nbsp;</a></h3>
+    <h3 class="bottom-some"><a style="color:#ffffff;display:inline;text-transform:none;" href="https://www.baihan.nyc/">Baihan Lin&nbsp;&nbsp;</a></h3>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
